[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "test_tools"
version = "0.1.0"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["test_tools"]
src_paths = ["src", "tests"]

[tool.ruff]
preview = true
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
# Escolha UMA estratégia:
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["test_tools"]

[tool.mypy]
python_version = "3.13"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
pretty = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
